--- a/tut/tut1.tex
+++ b/tut/tut1.tex
@@ -75,4 +75,13 @@ convex
 planar
 
 
+\section{tut 2}
+
+1. each loop iteration renders a frame/update
+2. initialize -> register call back functions -> enter glutMainLoop -> wait for event 
+
+3. call when want to trigger event
+4. raster: easy to process, vector: not resolution dependent
+5. double buffer: 
+
 \end{document}
